# lumi

./: .env.example  .gitignore  CODEX.md  README.md  package.json  tsconfig.base.json
datasets/: README.md
docs/: AI_NATIVE_GAP_ANALYSIS.md  AI_NATIVE_MVP.md  API.md  ARCHITECTURE.md  BROWSER_FLASH.md  CHANGELOG.md  ESP_CLAW_PARITY.md  ESP_IDF_AGENT_DEMO.md  NAMING.md  PRD.md  REMAINING_WORK.md  ROADMAP.md  RUNTIME_DEPLOYMENT_UNIT.md  RUNTIME_FS_PACKAGE.md  SKILLS_LAB.md
firmware/lumiforge-agent-c/: CMakeLists.txt  README.md
firmware/lumiforge-agent-c/examples/esp_idf_agent_demo/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/lumiforge-agent-c/examples/esp_idf_agent_demo/components/lumiforge_agent_c/: CMakeLists.txt
firmware/lumiforge-agent-c/examples/esp_idf_agent_demo/main/: CMakeLists.txt  app_main.c
firmware/lumiforge-agent-c/examples/esp_idf_minimal/: CMakeLists.txt  README.md
firmware/lumiforge-agent-c/examples/esp_idf_minimal/main/: CMakeLists.txt  main.c
firmware/lumiforge-agent-c/examples/host_demo/: main.c
firmware/lumiforge-agent-c/include/: lf_agent.h  lf_capability.h  lf_event.h  lf_memory.h  lf_platform.h  lf_platform_stdio.h  lf_tool.h  lf_types.h
firmware/lumiforge-agent-c/ports/esp_idf/: CMakeLists.txt  README.md  lf_platform_espidf.c  lf_platform_espidf.h
firmware/lumiforge-agent-c/src/: lf_agent.c  lf_capability.c  lf_event.c  lf_memory.c  lf_platform.c  lf_platform_stdio.c  lf_tool.c
tools/: clawctl.mjs  firmware-build-plan.mjs  runtime-fs-pack.mjs  skills-lab-review.mjs  skills-lab-sync.mjs
(+73 files in other folders)
